--- a/src/app/allModules/pages/task/task.component.html
+++ b/src/app/allModules/pages/task/task.component.html
@@ -71,7 +71,7 @@
                   </mat-form-field>
                 </div>
                 <div fxFlex="50">
-                  <mat-form-field class="pl-8" style="width: 100%;">
+                  <mat-form-field class="pl-8 pr-24" style="width: 100%;">
                     <mat-select (selectionChange)="typeSelected($event)" placeholder="Type" formControlName="Type">
                       <mat-option value="UI">UI</mat-option>
                       <mat-option value="Service">Service</mat-option>
@@ -87,7 +87,8 @@
               <div fxLayout="row" fxLayoutAlign="start">
                 <div fxFlex="50">
                   <mat-form-field class="pl-8 pr-24" style="width: 100%;">
-                    <input matInput placeholder="Estimated Effort" formControlName="EstimatedEffort">
+                    <input matInput placeholder="Estimated Effort (hrs)" formControlName="EstimatedEffort"
+                      (keydown)="numberOnly($event)">
                     <mat-error
                       *ngIf="taskFormGroup.get('EstimatedEffort').touched && taskFormGroup.get('EstimatedEffort').hasError('required')">
                       Estimated Effort is required
@@ -99,7 +100,7 @@
                   </mat-form-field>
                 </div>
                 <div fxFlex="50">
-                  <mat-form-field class="pl-8" style="width: 100%;">
+                  <mat-form-field class="pl-8 pr-24" style="width: 100%;">
                     <input matInput placeholder="Completion Before" [matDatepicker]="picker1"
                       formControlName="CompletionBefore">
                     <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -126,7 +127,7 @@
                   </mat-form-field>
                 </div>
                 <div fxFlex="50">
-                  <mat-form-field class="pl-8" style="width: 100%;">
+                  <mat-form-field class="pl-8 pr-24" style="width: 100%;">
                     <mat-select placeholder="Task Sub Group" formControlName="TaskSubGroupID">
                       <mat-option [value]="tas.TaskSubGroupID" *ngFor="let tas of AllTaskSubGroupView">
                         {{tas.Title}}
@@ -141,8 +142,10 @@
               </div>
               <div fxLayout="row" fxLayoutAlign="start">
                 <div fxFlex="50">
-                  <mat-form-field class="pl-8" style="width: 100%;" *ngIf="(CurrentUserRole | lowercase)==='developer'">
-                    <input matInput placeholder="Accepted Effort" formControlName="AcceptedEffort">
+                  <mat-form-field class="pl-8 pr-24" style="width: 100%;"
+                    *ngIf="(CurrentUserRole | lowercase)==='developer'">
+                    <input matInput placeholder="Accepted Effort (hrs)" formControlName="AcceptedEffort"
+                      (keydown)="numberOnly($event)">
                     <mat-error
                       *ngIf="taskFormGroup.get('AcceptedEffort').touched && taskFormGroup.get('AcceptedEffort').hasError('required')">
                       Accepted Effort is required
@@ -154,7 +157,8 @@
                   </mat-form-field>
                 </div>
                 <div fxFlex="50">
-                  <mat-form-field class="pl-8" style="width: 100%;" *ngIf="(CurrentUserRole | lowercase)==='developer'">
+                  <mat-form-field class="pl-8 pr-24" style="width: 100%;"
+                    *ngIf="(CurrentUserRole | lowercase)==='developer'">
                     <input matInput placeholder="Accepted Completion Date" [matDatepicker]="picker2"
                       formControlName="AcceptedCompletionDate">
                     <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -168,7 +172,7 @@
                 </div>
               </div>
             </form>
-            <div fxFlex fxLayout="column" *ngIf="(SelectedTask?.Type| lowercase)==='ui'">
+            <div fxFlex fxLayout="column" class="mt-24" *ngIf="(SelectedTask?.Type| lowercase)==='ui'">
               <div style="margin-left: 7px">
                 <span><strong>Input Table</strong></span>
               </div>
@@ -243,7 +247,7 @@
                   <tr mat-row *matRowDef="let row; columns: InputdisplayedColumns;" matRipple style=" cursor: pointer;">
                   </tr>
                 </table>
-                <div flex>
+                <div flex *ngIf="InputsByTask?.length">
                   <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
                   </mat-paginator>
                 </div>
@@ -253,11 +257,12 @@
 
             <div fxFlex fxLayout="column" *ngIf="(SelectedTask?.Type| lowercase)==='ui'">
               <div style="margin-left: 7px">
-                <span><strong>Output Table</strong></span>
+                <span *ngIf="((CurrentUserRole | lowercase)==='developer') || OutputsByTask?.length">
+                  <strong>Output Table</strong></span>
               </div>
               <div>
                 <form autocomplete="off" fxLayout="row" fxLayoutAlign="start" fxFlex="1 0 auto" name="form" novalidate
-                  [formGroup]="outputFormGroup" *ngIf="(CurrentUserRole | lowercase)!=='developer'">
+                  [formGroup]="outputFormGroup" *ngIf="(CurrentUserRole | lowercase)==='developer'">
                   <div fxFlex="10">
                     <mat-form-field class="pl-8 pr-12" style="width: 100%;">
                       <input matInput placeholder="Level" formControlName="Level" (keyup.enter)="keytab('outputField')">
@@ -339,7 +344,7 @@
                     style=" cursor: pointer;">
                   </tr>
                 </table>
-                <div flex>
+                <div flex *ngIf="OutputsByTask?.length">
                   <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
                   </mat-paginator>
                 </div>
@@ -395,7 +400,7 @@
                         style=" cursor: pointer;">
                       </tr>
                     </table>
-                    <div flex>
+                    <div flex *ngIf="LogicsByTask?.length">
                       <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
                       </mat-paginator>
                     </div>
@@ -449,7 +454,7 @@
                         style=" cursor: pointer;">
                       </tr>
                     </table>
-                    <div flex>
+                    <div flex *ngIf="ValidationsByTask?.length">
                       <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
                       </mat-paginator>
                     </div>
