project and taskgroup changes

--- a/src/app/allModules/pages/project/project.component.html
+++ b/src/app/allModules/pages/project/project.component.html
@@ -96,8 +96,8 @@
         </div>
       </div>
     </div>
+    <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="progressBarPosition" color="accent" mode="indeterminate">
+    </mat-progress-spinner>
+    <div id="overlay" *ngIf="IsProgressBarVisibile"></div>
   </div>
-  <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="progressBarPostion" color="accent" mode="indeterminate">
-  </mat-progress-spinner>
-  <div id="overlay" *ngIf="IsProgressBarVisibile"></div>
 </div>
