--- a/src/app/allModules/pages/project/project.component.scss
+++ b/src/app/allModules/pages/project/project.component.scss
@@ -1,7 +1,7 @@
 @import "src/@fuse/scss/fuse";
 
 #project {
-  .progressBarPostion {
+  .progressBarPosition {
     position: absolute !important;
     bottom: 50%;
     z-index: 1;
