--- a/src/app/allModules/pages/task/task.component.scss
+++ b/src/app/allModules/pages/task/task.component.scss
@@ -310,6 +310,7 @@
     border-radius: 9px;
     border: solid 1px #cccccc;
     background-color: #ffffff;
+    cursor: pointer !important;
   }
   .Rectangle-106 {
     width: 36px;
